fix offsets and bg-color in Techs on mobile devices

--- a/src/components/Main/Techs/Techs.scss
+++ b/src/components/Main/Techs/Techs.scss
@@ -3,6 +3,7 @@
 @import '../../../styles/landing';
 
 $techs-section-offset: 100px;
+$techs-section-offset-mobile: 70px;
 
 .techs {
   @extend %default-padding-landing;
@@ -14,12 +15,25 @@ $techs-section-offset: 100px;
 
   background-color: $landing-1;
 
+  @media screen and (max-width: $breakpoint-mobile) {
+    padding: {
+      top: $techs-section-offset-mobile;
+      bottom: $techs-section-offset-mobile;
+    }
+
+    background-color: unset;
+  }
+
   &__title {
     @include landing-heading;
   }
 
   &__content {
     padding-top: 90px;
+
+    @media screen and (max-width: $breakpoint-mobile) {
+      padding-top: 60px;
+    }
   }
 
   &__heading {
@@ -42,6 +56,10 @@ $techs-section-offset: 100px;
     text-align: center;
 
     padding-bottom: $techs-section-offset;
+
+    @media screen and (max-width: $breakpoint-mobile) {
+      padding-bottom: 50px;
+    }
   }
 
   &__list {
